--- a/src/main/java/version.properties
+++ b/src/main/java/version.properties
@@ -1,3 +1,3 @@
-#Mon Jan 18 10:39:39 EST 2021
-app.build=257
-app.version=20210118_1039
+#Tue Mar 09 11:10:35 KST 2021
+app.version=20210309_1110
+app.build=261
